fix modal title on mobile being covered by logo

--- a/scss/_modal.scss
+++ b/scss/_modal.scss
@@ -31,6 +31,12 @@
         line-height: 24px;
         margin-left: 15px;
         color: $white;
+
+        @include respond-to(mobile) {
+            margin-top: 30px;
+            margin-left: 0;
+            text-align: center;
+        }
     }
 
     .modal-logo {
